Login signup api

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,11 @@
-
+## Spring DATASOURCE (DataSourceAutoConfiguration & DataSourceProperties)
+spring.datasource.url=jdbc:mysql://localhost:3306/instagram_db?useSSL=false
+spring.datasource.username=root
+spring.datasource.password=
+## Hibernate Properties
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
+spring.jpa.hibernate.ddl-auto=update
+## JWT Properties
+jwt.secret=ju17th
+jwt.expirationMs=86400000
